Fixed width for videos on small screens

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -101,7 +101,7 @@ article.onlygraphic, article.entrypoints {
 }
 article.onlygraphic > video,
 article.onlygraphic > figure {
-	max-width: 50em;
+	max-width: 100%;
 }
 body > main > section > article > main > iframe {
 	width: 100%;
